--- a/config.json
+++ b/config.json
@@ -5,90 +5,6 @@
     ],
     "full_rule_outputs": [
         {
-            "target_software": "surfboard",
-            "output_name": "surfboard-rules.conf",
-            "parts": [
-                {
-                    "type": "base",
-                    "action_replace": {
-                        "REJECT": "AdBlock",
-                        "DIRECT": "DefaultAction"
-                    },
-                    "files": [
-                        "./surfboard/surfboard-template.conf"
-                    ]
-                },
-                {
-                    "type": "surge-like-rules",
-                    "minify": true,
-                    "action_replace": {
-                        "REJECT": "AdBlock",
-                        "DIRECT": "DefaultAction"
-                    },
-                    "files": [
-                        "./common-rules/common-rules.conf",
-                        "./generated_rules/custom-quantumult_hostnames.conf",
-                        "./generated_rules/easylist-quantumult_hostnames.conf",
-                        "./generated_rules/easylist-chn-quantumult_hostnames.conf",
-                        "./generated_rules/adguard-dns-quantumult_hostnames.conf"
-                    ]
-                },
-                {
-                    "type": "base",
-                    "files": [
-                        "./common-rules/common-medium.conf"
-                    ]
-                },
-                {
-                    "type": "surge-like-rules",
-                    "files": [
-                        "./generated_rules/gfwlist-quantumult_hostnames.conf"
-                    ]
-                },
-                {
-                    "type": "base",
-                    "files": [
-                        "./common-rules/common-final.conf"
-                    ]
-                }
-            ]
-        },
-        {
-            "target_software": "clash",
-            "output_name": "clash-rules.yaml",
-            "parts": [
-                {
-                    "type": "base",
-                    "action_replace": {
-                        "REJECT": "AdBlock",
-                        "DIRECT": "DefaultAction"
-                    },
-                    "files": [
-                        "./clash/clash-template-pre.conf"
-                    ]
-                },
-                {
-                    "type": "surge-like-rules",
-                    "minify": true,
-                    "action_replace": {
-                        "REJECT": "AdBlock",
-                        "DIRECT": "DefaultAction"
-                    },
-                    "files": [
-                        "./common-rules/common-rules.conf",
-                        "./generated_rules/custom-quantumult_hostnames.conf",
-                        "./generated_rules/easylist-quantumult_hostnames.conf",
-                        "./generated_rules/easylist-chn-quantumult_hostnames.conf",
-                        "./generated_rules/easyprivacy-quantumult_hostnames.conf",
-                        "./generated_rules/adguard-dns-quantumult_hostnames.conf",
-                        "./common-rules/common-medium.conf",
-                        "./generated_rules/gfwlist-quantumult_hostnames.conf",
-                        "./common-rules/common-final.conf"
-                    ]
-                }
-            ]
-        },
-        {
             "target_software": "clash",
             "output_name": "clash-premium-rules.yaml",
             "parts": [
@@ -116,8 +32,7 @@
             ]
         }
     ],
-    "servers": [
-    ],
+    "servers": [],
     "rules_list": [
         {
             "name": "AdGuard DNS Filter",
