--- a/config.json
+++ b/config.json
@@ -41,7 +41,7 @@
             "action": "REJECT",
             "exclude_action": "IGNORE",
             "file_prefix": "adguard-dns",
-            "url": "https://ad.yuwell.dynv6.net/dns.txt"
+            "url": "https://raw.githubusercontent.com/8680/GOODBYEADS/master/data/rules/adblock.txt"
         }
     ]
 }
