--- a/config.json
+++ b/config.json
@@ -43,5 +43,14 @@
             "file_prefix": "adguard-dns",
             "url": "https://raw.githubusercontent.com/8680/GOODBYEADS/master/data/rules/adblock.txt"
         }
+        {
+            "name": "White AdGuard DNS Filter",
+            "type": "adblock",
+            "action_type": "HOST-SUFFIX",
+            "action": "DIRECT",
+            "exclude_action": "IGNORE",
+            "file_prefix": "White-adguard-dns",
+            "url": "https://raw.githubusercontent.com/8680/GOODBYEADS/master/data/rules/adblock.txt"
+        }
     ]
 }
