--- a/config.json
+++ b/config.json
@@ -47,10 +47,10 @@
             "name": "White AdGuard DNS Filter",
             "type": "adblock",
             "action_type": "HOST-SUFFIX",
-            "action": "DIRECT",
+            "action": "REJECT",
             "exclude_action": "IGNORE",
             "file_prefix": "White-adguard-dns",
-            "url": "https://raw.githubusercontent.com/8680/GOODBYEADS/master/data/rules/dns.txt"
+            "url": "https://raw.githubusercontent.com/8680/GOODBYEADS/master/data/rules/allow.txt"
         }
     ]
 }
