Add HaGeZi's OPPO & Realme Tracker DNS Blocklist

--- a/config.json
+++ b/config.json
@@ -51,6 +51,15 @@
             "exclude_action": "IGNORE",
             "file_prefix": "White-adguard-dns",
             "url": "https://raw.githubusercontent.com/8680/GOODBYEADS/master/data/rules/allow.txt"
+        },
+        {
+            "name": "HaGeZi's OPPO & Realme Tracker DNS Blocklist",
+            "type": "adblock",
+            "action_type": "HOST-SUFFIX",
+            "action": "REJECT",
+            "exclude_action": "IGNORE",
+            "file_prefix": "White-adguard-dns",
+            "url": "https://raw.githubusercontent.com/hagezi/dns-blocklists/refs/heads/main/adblock/native.oppo-realme.txt"
         }
     ]
 }
